syntax = "proto3";

package taocontext;

enum OrderType{
  GTC = 0;
  IOC = 1;
  IOC_BUDGET = 2;
  FOK = 3;
  FOK_BUDGET = 4;
}

enum OrderSid{
  OFFER = 0;
  BID = 1;
}

enum OrderCmd{
  PLACE = 0;
  MOVE = 1;
  CANCEL = 2;
  REDUCE = 3;
  REJECT = 4;
  ACCEPT = 5;
}

message OrderDto{
  string id = 1;
  OrderType type = 2;
  OrderSid side = 3;
  OrderCmd commond = 4;
  int32 version = 5;
  int64 timestamp = 6;
  int64 price = 7;
  int64 reserveBidPrice = 8;
  int64 amount = 9;
  int64 takerFee = 11;
  int64 makerFee = 12;
  string market = 13; 
  string userId = 14;
  string source =15;
}

message OrderReplyDto{
  string replyId = 1;
  OrderDto order = 2;
  OrderCmd commond = 3;
  int64 filled = 4;
  int64 left = 5;
  int64 fee = 6;
}

message MarketDto{
  string symbol = 1;
  string target = 2;
  string money = 3;
  int32 targetPrec = 4;
  int32 moneyPrec = 5;
  int32 feePrec = 6;
  int64 minAmount = 7;
  int64 minBase = 8;
}