syntax = "proto3";

package grpc;
import "taoContext.proto";

option go_package = "/grpc";
option java_multiple_files = true;
option java_package = "tao.exchange.com.grpc";

service TaoExchangeSrv{
    rpc queryOrder(QueryReq) returns (QueryRsp){}
    rpc doOrderCommond(OrderReq) returns (OrderRsp){}
}
